--- a/IsbnApi.Model/IsbnApi.Model.csproj
+++ b/IsbnApi.Model/IsbnApi.Model.csproj
@@ -40,9 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="GoogleBook.cs" />
     <Compile Include="IBooks.cs" />
     <Compile Include="IGoogleApiClient.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VolumeInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
